--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/core-service:latest
+          tags: ghcr.io/${{ github.repository_owner }}/core_service:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max # магия
 
