--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       retries: 5
 
   core-service:
-    image: ${CORE-SERVICE}
+    image: ${core_service}
     container_name: fastapi
     depends_on:
       postgres:
