--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,12 +36,14 @@ jobs:
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/core_service:latest
           cache-from: type=gha
-          cache-to: type=gha,mode=max # магия
+          cache-to: type=gha,mode=max
+          # магия
 
   deploy:
     runs-on: ubuntu-24.04
     needs: [build-core-service]
-    if: github.ref == 'refs/heads/main'  # деплой только из main
+    if: github.ref == 'refs/heads/main'
+    # деплой только из main
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -87,9 +89,9 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           env:
-            ACCESS_SECRET_KEY: ${{ secrets.ACCESS_SECRET_KEY }}
-            REFRESH_SECRET_KEY: ${{ secrets.REFRESH_SECRET_KEY }}
-            ALGORITHM: ${{ secrets.ALGORITHM }}
+            ACCESS_SECRET_KEY: "${{ secrets.ACCESS_SECRET_KEY }}"
+            REFRESH_SECRET_KEY: "${{ secrets.REFRESH_SECRET_KEY }}"
+            ALGORITHM: "${{ secrets.ALGORITHM }}"
             ACCESS_TOKEN_EXPIRE_MINUTES: ${{ secrets.ACCESS_TOKEN_EXPIRE_MINUTES }}
             REFRESH_TOKEN_EXPIRE_DAYS: ${{ secrets.REFRESH_TOKEN_EXPIRE_DAYS }}
             FASTAPI_HOST: ${{ secrets.CORE_HOST }}
