--- a/app/core/Dockerfile
+++ b/app/core/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.13-slim
 
-WORKDIR /app
+WORKDIR /src
 
 RUN apt-get update && apt-get install -y \
     curl \
@@ -10,6 +10,14 @@ RUN pip install uv
 
 COPY pyproject.toml ./
 
+RUN mkdir -p /config
+
+COPY config.yml.template ./config/config.yml.template
+
+COPY ./generate_config.sh ./generate_config.sh
+
+RUN chmod +x ./generate_config.sh
+
 RUN uv lock
 
 RUN uv sync --locked --no-dev
@@ -18,4 +26,4 @@ COPY src/ /src
 
 EXPOSE 8000
 
-CMD ["uv", "run", "python", "main.py"]
+CMD bash ./generate_config.sh /config/config.yml ./config.yml.template && uv run python main.py
