--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           fetch-depth: 1
           sparse-checkout: |
-            app/core/*
+            app/core
 
       #- name: Setup Python
       #  uses: actions/setup-python@v5
