--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
-          context: ./core
+          context: ./
           file: ./core/Dockerfile
           push: true
           tags: ghcr.io/piapav/core_service:latest
