--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
-          context: ./
-          file: ./core/Dockerfile
+          context: ./app/core
+          file: ./app/core/Dockerfile
           push: true
           tags: ghcr.io/piapav/core_service:latest
 
