--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: MoonliteSoda
-          password: ${{ secrets.TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
@@ -34,7 +34,9 @@ jobs:
           context: ./app/core
           file: ./app/core/Dockerfile
           push: true
-          tags: ghcr.io/piapav/core_service:latest
+          tags: ghcr.io/${{ github.actor }}/core_service:latest
+          # workaround он же ебучий костыль
+          # в будущем пушить в реп организации а не в личный
 
 
   deploy:
