--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: moonlitesoda
+          username: MoonliteSoda
           #брать из github переводить в lowercase
           password: ${{ secrets.TOKEN }}
 
