--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: MoonliteSoda
-          #брать из github переводить в lowercase
+          username: ${{ github.actor }}
           password: ${{ secrets.TOKEN }}
 
       - name: Build and Push Docker Image
