--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.ORG_TOKEN }}
+          password: ${{ secrets.TOKEN }}
 
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
