--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.TOKEN }}
+          username: ${{ github.actor }}       # Личный аккаунт, на который создан PAT
+          password: ${{ secrets.GHCR_TOKEN }} # PAT с write:packages
 
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
@@ -35,6 +35,7 @@ jobs:
           file: ./app/core/Dockerfile
           push: true
           tags: ghcr.io/piapav/core_service:latest
+          # lowercase
           # workaround он же ебучий костыль
           # в будущем пушить в реп организации а не в личный
 
