--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}       # Личный аккаунт, на который создан PAT
+          username: piapav      # Личный аккаунт, на который создан PAT
           password: ${{ secrets.GHCR_TOKEN }} # PAT с write:packages
 
       - name: Build and Push Docker Image
