--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: MoonliteSoda       # Личный аккаунт PAT
-          password: ${{ secrets.GHCR_TOKEN }} # PAT с write:packages
+          username: MoonliteSoda    # Личный аккаунт PAT
+          password: ${{ secrets.TOKEN }} # PAT с write:packages
 
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
