--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: MoonliteSoda    # Личный аккаунт PAT
+          username: Sergeii    # Личный аккаунт PAT
           password: ${{ secrets.TOKEN }} # PAT с write:packages
 
       - name: Build and Push Docker Image
