--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}    # Личный аккаунт PAT
-          password: ${{ secrets.TOKEN }} # PAT с write:packages
+          password: ${{ secrets.ORG_TOKEN }} # PAT с write:packages
 
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
