--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       retries: 5
 
   core-service:
-    image: ${core_service}
+    image: ${CORE_SERVICE}
     container_name: core_service
     depends_on:
       postgres:
