--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}    # Личный аккаунт PAT
-          password: ${{ secrets.ORG_TOKEN }} # PAT с write:packages
+          username: <GitHubUsernameWithOrgAccess>    # Личный аккаунт
+          password: ${{ secrets.ORG_TOKEN }} # орговский токен с правами
 
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
@@ -38,7 +38,6 @@ jobs:
           tags: ghcr.io/piapav/core_service:latest
           # lowercase
           # workaround он же ебучий костыль
-          # в будущем пушить в реп организации а не в личный
 
 
   deploy:
