--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: <GitHubUsernameWithOrgAccess>    # Личный аккаунт
+          username: MoonliteSoda    # выпустивший ниже токен
           password: ${{ secrets.ORG_TOKEN }} # орговский токен с правами
 
       - name: Build and Push Docker Image
