--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,6 +92,17 @@ jobs:
           source: "./docker-compose.yml,./.env"
           target: "~/deploy/"
 
+      - name: Clean old containers on VPS
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+            host: ${{ secrets.SERVER_HOST }}
+            username: ${{ secrets.SERVER_USER }}
+            key: ${{ secrets.SERVER_SSH_KEY }}
+            script: |
+              cd ~/deploy
+              docker-compose down --remove-orphans
+              docker image rm -f ghcr.io/${{ github.repository_owner }}/core-service:latest || true
+
       - name: Run docker-compose on VPS
         uses: appleboy/ssh-action@v0.1.10
         with:
