--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,6 +103,17 @@ jobs:
               docker-compose down --remove-orphans
               docker image rm -f ghcr.io/piapav/core-service:latest || true
 
+      - name: Login to GHCR on VPS
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          env:
+            GHCR_PAT: ${{ secrets.ORG_TOKEN }}
+          script: |
+            echo "$GHCR_PAT" | docker login ghcr.io -u MoonliteSoda --password-stdin
+
       - name: Run docker-compose on VPS
         uses: appleboy/ssh-action@v0.1.10
         with:
