--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,7 +109,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          env:
+          envs:
             GHCR_PAT: ${{ secrets.ORG_TOKEN }}
           script: |
             echo "$GHCR_PAT" | docker login ghcr.io -u MoonliteSoda --password-stdin
