--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       retries: 5
 
   core-service:
-    image: ${CORE_SERVICE}
+    image: ${CORE_SERVICE_IMAGE}
     container_name: core_service
     depends_on:
       postgres:
