--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,8 +110,17 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            echo "${{ secrets.TOKEN }}" | docker login ghcr.io -u MoonliteSoda --password-stdin
+            echo "${{ secrets.ORG_GHCR_TOKEN }}" | docker login ghcr.io -u MoonliteSoda --password-stdin
 
+      - name: Pull images on VPS
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            docker pull ghcr.io/piapav/core_service:latest
+            docker pull postgres:16
 
       - name: Run docker-compose on VPS
         uses: appleboy/ssh-action@v0.1.10
@@ -121,6 +130,5 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             cd ~/deploy
-            docker-compose --env-file .env pull
             docker-compose --env-file .env up -d
             docker-compose ps
