--- a/app/core/Dockerfile
+++ b/app/core/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /src
 
 RUN apt-get update && apt-get install -y \
     curl \
+    gettext \
     && rm -rf /var/lib/apt/lists/*
 
 RUN pip install uv
@@ -12,9 +13,9 @@ COPY pyproject.toml ./
 
 RUN mkdir -p /config
 
-COPY config.yml.template ./config/config.yml.template
+COPY ./makes/config.yml.template ./config/config.yml.template
 
-COPY ./generate_config.sh ./generate_config.sh
+COPY ./makes/generate_config.sh ./generate_config.sh
 
 RUN chmod +x ./generate_config.sh
 
@@ -26,4 +27,7 @@ COPY src/ /src
 
 EXPOSE 8000
 
-CMD bash ./generate_config.sh /config/config.yml ./config.yml.template && uv run python main.py
+COPY ./makes/entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+ENTRYPOINT ["/entrypoint.sh"]
