--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,7 @@ jobs:
           echo "REFRESH_TOKEN_EXPIRE_DAYS=${{ secrets.REFRESH_TOKEN_EXPIRE_DAYS }}" >> .env
           echo "CORE_HOST=${{ secrets.CORE_HOST }}" >> .env
           echo "CORE_PORT=${{ secrets.CORE_PORT }}" >> .env
+          echo "POSTGRES_ECHO=${{ secrets.DB_ECHO}}" >> .env
 
       - name: Prepare deploy directory on VPS
         uses: appleboy/ssh-action@v0.1.10
@@ -89,7 +90,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          source: "./docker-compose.yml,./.env"
+          source: "./docker-compose.yml, ./.env"
           target: "~/deploy/"
 
       - name: Clean old containers on VPS
