--- a/app/core/makes/config.yml.template
+++ b/app/core/makes/config.yml.template
@@ -1,7 +1,7 @@
 auth:
   ACCESS_SECRET_KEY: ${ACCESS_SECRET_KEY}
   REFRESH_SECRET_KEY: ${REFRESH_SECRET_KEY}
-  ALGORITHM: ${ALGORITHM}
+  ALGORITHM: "HS256"
   ACCESS_TOKEN_EXPIRE_MINUTES: ${ACCESS_TOKEN_EXPIRE_MINUTES}
   REFRESH_TOKEN_EXPIRE_DAYS: ${REFRESH_TOKEN_EXPIRE_DAYS}
 
@@ -10,7 +10,7 @@ server:
   port: ${CORE_PORT}
 
 db:
-  host: postgres
+  host: ${POSTGRES_HOST}
   port: 5432
   name: ${POSTGRES_DB}
   user: ${POSTGRES_USER}
