--- a/app/core/Dockerfile
+++ b/app/core/Dockerfile
@@ -4,20 +4,11 @@ WORKDIR /src
 
 RUN apt-get update && apt-get install -y \
     curl \
-    gettext \
     && rm -rf /var/lib/apt/lists/*
 
 RUN pip install uv
 
 COPY pyproject.toml ./
-
-RUN mkdir -p /config
-
-COPY ./makes/config.yml.template ./config/config.yml.template
-
-COPY ./makes/generate_config.sh ./generate_config.sh
-
-RUN chmod +x ./generate_config.sh
 
 RUN uv lock
 
@@ -27,7 +18,4 @@ COPY src/ /src
 
 EXPOSE 8000
 
-COPY ./makes/entrypoint.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
-
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["uv", "python", "main"]
