--- a/app/core/pyproject.toml
+++ b/app/core/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "bcrypt>=5.0.0",
     "fastapi>=0.118.0",
     "pyjwt>=2.10.1",
+    "python-dotenv>=1.1.1",
     "pyyaml>=6.0.3",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.37.0",
