--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,8 @@ on:
 jobs:
 
   build-core-service:
+    #enviroment важно не трогать
+    environment: prod
     runs-on: ubuntu-24.04
     steps:
       - name: Copy repository
@@ -14,7 +16,7 @@ jobs:
         with:
           fetch-depth: 1
           sparse-checkout: |
-            app/core/*
+            app/core
 
       #- name: Setup Python
       #  uses: actions/setup-python@v5
@@ -25,23 +27,27 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: MoonliteSoda    # выпустивший ниже токен НЕ ТРОГАТЬ
+          password: ${{ secrets.TOKEN }} #это мой токен с правами
 
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
-          context: ./
-          file: ./Dockerfile
+          context: ./app/core
+          file: ./app/core/Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/core_service:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max # магия
+          tags: ghcr.io/piapav/core_service:latest
+          # lowercase
+          # workaround он же ебучий костыль
+
 
   deploy:
+    #enviroment важно не трогать
+    environment: prod
     runs-on: ubuntu-24.04
     needs: [build-core-service]
-    if: github.ref == 'refs/heads/main'  # деплой только из main
+    if: github.ref == 'refs/heads/main'
+    # деплой только из main
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -56,8 +62,15 @@ jobs:
           echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
           echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
           echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
-          echo "CORE-SERVICE=ghcr.io/${{ github.repository_owner }}/core-service:latest" >> .env
-          echo "CORE_PORT=8000" >> .env
+          echo "CORE_SERVICE_IMAGE=ghcr.io/piapav/core_service:latest" >> .env
+          echo "ACCESS_SECRET_KEY=${{ secrets.ACCESS_SECRET_KEY }}" >> .env
+          echo "REFRESH_SECRET_KEY=${{ secrets.REFRESH_SECRET_KEY }}" >> .env
+          echo "ALGORITHM=${{ secrets.ALGORITHM }}" >> .env
+          echo "ACCESS_TOKEN_EXPIRE_MINUTES=${{ secrets.ACCESS_TOKEN_EXPIRE_MINUTES }}" >> .env
+          echo "REFRESH_TOKEN_EXPIRE_DAYS=${{ secrets.REFRESH_TOKEN_EXPIRE_DAYS }}" >> .env
+          echo "CORE_HOST=${{ secrets.CORE_HOST }}" >> .env
+          echo "CORE_PORT=${{ secrets.CORE_PORT }}" >> .env
+          echo "POSTGRES_ECHO=${{ secrets.DB_ECHO}}" >> .env
 
       - name: Prepare deploy directory on VPS
         uses: appleboy/ssh-action@v0.1.10
@@ -77,29 +90,38 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          source: "./docker-compose.yml,./scripts/generate_config.sh"
+          source: "./docker-compose.yml, ./.env"
           target: "~/deploy/"
 
-      - name: Generate config.yml on VPS
+      - name: Clean old containers on VPS
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+            host: ${{ secrets.SERVER_HOST }}
+            username: ${{ secrets.SERVER_USER }}
+            key: ${{ secrets.SERVER_SSH_KEY }}
+            script: |
+              cd ~/deploy
+              docker-compose down --remove-orphans
+              docker image rm -f ghcr.io/piapav/core-service:latest || true
+
+      - name: Login to GHCR on VPS
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          env:
-            ACCESS_SECRET_KEY: ${{ secrets.ACCESS_SECRET_KEY }}
-            REFRESH_SECRET_KEY: ${{ secrets.REFRESH_SECRET_KEY }}
-            ALGORITHM: ${{ secrets.ALGORITHM }}
-            ACCESS_TOKEN_EXPIRE_MINUTES: ${{ secrets.ACCESS_TOKEN_EXPIRE_MINUTES }}
-            REFRESH_TOKEN_EXPIRE_DAYS: ${{ secrets.REFRESH_TOKEN_EXPIRE_DAYS }}
-            FASTAPI_HOST: ${{ secrets.CORE_HOST }}
-            FASTAPI_PORT: ${{ secrets.CORE_PORT }}
-            POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
-            POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-            POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-
           script: |
-            bash ~/deploy/generate_config.sh ~/deploy/config.yml
+            echo "${{ secrets.TOKEN }}" | docker login ghcr.io -u MoonliteSoda --password-stdin
+
+      - name: Pull images on VPS
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            docker pull ghcr.io/piapav/core_service:latest
+            docker pull postgres:16
 
       - name: Run docker-compose on VPS
         uses: appleboy/ssh-action@v0.1.10
@@ -109,6 +131,5 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             cd ~/deploy
-            docker-compose pull
-            docker-compose up -d
+            docker-compose --env-file .env up -d
             docker-compose ps
