--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,25 @@ services:
       timeout: 5s
       retries: 5
 
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    command: server /data --console-address ":9001"
+    restart: unless-stopped
+    ports:
+      - "9000:${S3_API_PORT}"
+      - "9001:${S3_CONSOLE_PORT}"
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+    volumes:
+      - ./minio-data:/data
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://localhost:${S3_API_PORT}/minio/health/live || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   core-service:
     image: ${CORE_SERVICE_IMAGE}
     container_name: core_service
