--- a/app/core/pyproject.toml
+++ b/app/core/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "asyncpg>=0.30.0",
     "bcrypt>=5.0.0",
     "fastapi>=0.118.0",
+    "pika>=1.3.2",
     "pyjwt>=2.10.1",
     "python-dotenv>=1.1.1",
     "python-multipart>=0.0.20",
