--- a/app/core/pyproject.toml
+++ b/app/core/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Основной сервис для работы"
 requires-python = ">=3.13"
 dependencies = [
+    "aio-pika>=9.5.7",
     "asyncpg>=0.30.0",
     "bcrypt>=5.0.0",
     "fastapi>=0.118.0",
