--- a/app/core/pyproject.toml
+++ b/app/core/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "aio-pika>=9.5.7",
     "asyncpg>=0.30.0",
     "bcrypt>=5.0.0",
+    "boto3>=1.40.52",
     "fastapi>=0.118.0",
     "pika>=1.3.2",
     "pyjwt>=2.10.1",
