--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /merge-commit.sh
 /app/core/src/infrastructure/broker/test_producer.py
 /app/core/src/infrastructure/broker/consumer test only/
+/app/algorithm/.env
