--- a/app/core/pyproject.toml
+++ b/app/core/pyproject.toml
@@ -9,7 +9,10 @@ dependencies = [
     "bcrypt>=5.0.0",
     "boto3>=1.40.52",
     "fastapi>=0.118.0",
+    "grpcio>=1.76.0",
+    "grpcio-tools>=1.76.0",
     "pika>=1.3.2",
+    "protobuf>=6.33.0",
     "pyjwt>=2.10.1",
     "python-dotenv>=1.1.1",
     "python-multipart>=0.0.20",
