--- a/app/algorithm/pyproject.toml
+++ b/app/algorithm/pyproject.toml
@@ -5,6 +5,7 @@ description = "Сервис построения графика архитект
 requires-python = ">=3.13"
 dependencies = [
     "aio-pika>=9.5.7",
+    "aioboto3>=15.5.0",
     "ast2json>=0.4",
     "dotenv>=0.9.9",
     "grpcio>=1.76.0",
