--- a/app/core/Dockerfile
+++ b/app/core/Dockerfile
@@ -4,18 +4,19 @@ WORKDIR /src
 
 RUN apt-get update && apt-get install -y \
     curl \
+    build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-RUN pip install uv
+RUN pip install --no-cache-dir uv
 
-COPY pyproject.toml ./
+COPY app/core/pyproject.toml ./
+COPY app/core/src/ /src/
+
+COPY proto/ /src/proto
 
 RUN uv lock
-
 RUN uv sync --locked --no-dev
-
-COPY src/ /src
 
 EXPOSE 8000
 
-ENTRYPOINT ["uv","run","python", "main.py"]
+ENTRYPOINT ["uv", "run", "python", "main.py"]
