--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
-          context: ./app/core
+          context: .
           file: ./app/core/Dockerfile
           push: true
           tags: ghcr.io/piapav/core_service:latest
