--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,15 +30,14 @@ jobs:
           username: MoonliteSoda    # выпустивший ниже токен НЕ ТРОГАТЬ
           password: ${{ secrets.TOKEN }} #это мой токен с правами
 
-      - name: Build and Push Docker Image
+      - name: Build and Push Core Image
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: .                #корень репо, чтобы видеть proto и algorithm
           file: ./app/core/Dockerfile
           push: true
           tags: ghcr.io/piapav/core_service:latest
-          # lowercase
-          # workaround он же ебучий костыль
+
 
 
   deploy:
