--- a/app/core/Dockerfile
+++ b/app/core/Dockerfile
@@ -9,12 +9,8 @@ RUN apt-get update && apt-get install -y \
 
 RUN pip install --no-cache-dir uv grpcio-tools
 
-COPY app/core/pyproject.toml ./core_pyproject.toml
+COPY app/core/pyproject.toml ./pyproject.toml
 COPY app/core/src/ ./core/
-
-
-COPY app/algorithm/pyproject.toml ./algorithm_pyproject.toml
-COPY app/algorithm/src/ ./algorithm/
 
 COPY proto/ ./proto/
 
