--- a/app/algorithm/Dockerfile
+++ b/app/algorithm/Dockerfile
@@ -18,4 +18,6 @@ RUN uv lock
 RUN uv sync --locked --no-dev
 RUN bash ./proto/generate_grpc.sh
 
+EXPOSE 50051
+
 ENTRYPOINT ["uv", "run", "python", "algorithm/main.py"]
