--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,8 @@ services:
   algorithm-service:
     image: ${ALGORITHM_SERVICE_IMAGE}
     container_name: algorithm_service
+    ports:
+      - "50051:50051"
     depends_on:
       core-service:
         condition: service_started
