--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,9 +109,9 @@ jobs:
           echo "S3_MINIO_IMAGE=${{ secrets.S3_MINIO_IMAGE }}" >> .env
           echo "ALGORITHM_SERVICE_IMAGE=${{ secrets.ALGORITHM_SERVICE_IMAGE }}" >> .env
           
-          #GRPC 
-          echo "GRPC_HOST=${{ secrets.GRPC_HOST }}" >> .env
-          echo "GRPC_PORT=${{ secrets.GRPC_PORT }}" >> .env          
+#          #GRPC
+#          echo "GRPC_HOST=${{ secrets.GRPC_HOST }}" >> .env
+#          echo "GRPC_PORT=${{ secrets.GRPC_PORT }}" >> .env
 
 
 
