--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,11 +78,11 @@ services:
   algorithm-service:
     image: ${ALGORITHM_SERVICE_IMAGE}
     container_name: algorithm_service
-    ports:
-      - "50051:50051"
+#    ports:
+#      - "50051:50051"
     depends_on:
       core-service:
-        condition: service_started
+        condition: service_healthy
       rabbitmq:
         condition: service_started
       minio:
@@ -97,6 +97,7 @@ services:
       interval: 15s
       timeout: 5s
       retries: 5
+      start_period: 20s
 
 networks:
   backend:
