--- a/app/core/pyproject.toml
+++ b/app/core/pyproject.toml
@@ -11,12 +11,14 @@ dependencies = [
     "fastapi>=0.118.0",
     "grpcio>=1.76.0",
     "grpcio-tools>=1.76.0",
+    "jinja2>=3.1.6",
     "pika>=1.3.2",
     "protobuf>=6.33.0",
     "pyjwt>=2.10.1",
     "python-dotenv>=1.1.1",
     "python-multipart>=0.0.20",
     "pyyaml>=6.0.3",
+    "redis>=7.1.0",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.37.0",
 ]
